--- a/Master thesis/Code/xyz_file_problems.ipynb
+++ b/Master thesis/Code/xyz_file_problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,13 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "24\n",
       "Index: 3 failed\n",
       "Index: 8 failed\n",
       "Index: 9 failed\n",
@@ -206,7 +207,8 @@
       "Index: 15 failed\n",
       "Index: 16 failed\n",
       "Index: 17 failed\n",
-      "Index: 18 failed\n"
+      "Index: 18 failed\n",
+      "Index: 19 failed\n"
      ]
     },
     {
@@ -216,7 +218,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndex: \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(i)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m failed\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 11\u001b[0m force \u001b[38;5;241m=\u001b[39m \u001b[43mtraj\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mget_forces()[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]\n",
+      "Cell \u001b[1;32mIn[16], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndex: \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(i)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m failed\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 11\u001b[0m force \u001b[38;5;241m=\u001b[39m \u001b[43mtraj\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mget_forces()[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]\n",
       "File \u001b[1;32mc:\\Users\\Birk Dissing\\anaconda3\\envs\\MM\\lib\\site-packages\\ase\\io\\trajectory.py:259\u001b[0m, in \u001b[0;36mTrajectoryReader.__getitem__\u001b[1;34m(self, i)\u001b[0m\n\u001b[0;32m    257\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(i, \u001b[38;5;28mslice\u001b[39m):\n\u001b[0;32m    258\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m SlicedTrajectory(\u001b[38;5;28mself\u001b[39m, i)\n\u001b[1;32m--> 259\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackend\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m    260\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumbers\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m b:\n\u001b[0;32m    261\u001b[0m     \u001b[38;5;66;03m# numbers and other header info was written alongside the image:\u001b[39;00m\n\u001b[0;32m    262\u001b[0m     atoms \u001b[38;5;241m=\u001b[39m read_atoms(b, traj\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\Birk Dissing\\anaconda3\\envs\\MM\\lib\\site-packages\\ase\\io\\ulm.py:584\u001b[0m, in \u001b[0;36mReader.__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m    582\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, index):\n\u001b[0;32m    583\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return Reader for item *index*.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 584\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_read_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    585\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Reader(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fd, index, data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_little_endian)\n",
       "File \u001b[1;32mc:\\Users\\Birk Dissing\\anaconda3\\envs\\MM\\lib\\site-packages\\ase\\io\\ulm.py:578\u001b[0m, in \u001b[0;36mReader._read_data\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m    576\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fd\u001b[38;5;241m.\u001b[39mseek(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_offsets[index])\n\u001b[0;32m    577\u001b[0m size \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(readints(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fd, \u001b[38;5;241m1\u001b[39m)[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m--> 578\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_fd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43msize\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    579\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_little_endian \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_little_endian\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    580\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
@@ -228,12 +230,13 @@
     }
    ],
    "source": [
+    "\n",
     "traj = TrajectoryReader(\"D:\\KU\\Masters\\Gemma_group\\Master thesis\\Code\\Data\\EtOH_moldyn_NVE_help.traj\")\n",
-    "\n",
-    "\n",
+    "print(len(traj))\n",
     "traj_forces = []\n",
     "for i in range(len(traj)):\n",
     "    try:\n",
+    "        \n",
     "        traj_forces.append(traj[i].get_forces()[0,0])\n",
     "    except:\n",
     "        print(\"Index: \"+str(i)+\" failed\")\n",
