working on creating OLS var models

--- a/Master thesis/Code/Model_integration_gpaw.ipynb
+++ b/Master thesis/Code/Model_integration_gpaw.ipynb
@@ -51,13 +51,30 @@
     "    X[:,-1] = np.ones(len(main)-order)\n",
     "    return sm.OLS(main[order:], X)\n",
     "\n",
+    "# Returns 3 fitted models from create_VAR_OLS_model to create 3 models to respectively predict the forces in x, y, and z direction for an atom in a molecule.\n",
+    "# Uses L2 regularized fitting.\n",
+    "#_____Inputs______\n",
+    "# forces - 2D np array with the three force time series for the atom chosen. Has the shape [N, 3] where N is the number of input points in the model.\n",
+    "# order - Positive integer which decides the numper of points in the past is used to predict the next point\n",
     "#\n",
+    "#_____Output______\n",
+    "# Returns 3 fitted VAR OLS which can be used to predict future points in the time series. t+1 must be predicted for all three time series before t+2 can be predicted.\n",
     "def create_atom_OLS_model(forces, order=2):\n",
     "    model_x = create_VAR_OLS_model(forces[:,0], forces[:,1:], order=order).fit_regularized(l1_wt=0)\n",
     "    model_y = create_VAR_OLS_model(forces[:,1], forces[:,[0,2]], order=order).fit_regularized(l1_wt=0)\n",
     "    model_z = create_VAR_OLS_model(forces[:,2], forces[:,:2], order=order).fit_regularized(l1_wt=0)\n",
     "    return model_x, model_y, model_z\n",
     "\n",
+    "# Function which predicts the forces on the atoms in a molecule for a certain number of time steps\n",
+    "#_____Inputs______\n",
+    "# file - String with the name of the xyz file containing information on the molecule\n",
+    "# input - Positive integer with the number of data points used as input in training the OLS VAR models\n",
+    "# pred_step - Positive integer which decides the number of time steps predicted by the OLS VAR models\n",
+    "# order - Positive integer which decides the numper of points in the past is used to predict the next point\n",
+    "#\n",
+    "#_____Output______\n",
+    "# Returns a 3D np array with the predicted forces. The array as the following shape [N, 3, p], with N being the number of atoms in the molecule\n",
+    "# and p being the number of time steps predicted\n",
     "def predict_forces(file=file, input=input, pred_step=pred_step, order=2):\n",
     "    mol = read(file, index=slice(-input, None))\n",
     "    n_atoms = mol[0].get_global_number_of_atoms()\n",
