--- a/Master thesis/Code/Model_integration_gpaw.ipynb
+++ b/Master thesis/Code/Model_integration_gpaw.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +104,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Get forces from calculator\n"
+      "[[[ 2.46951238  2.94327068  3.2607724   3.4281794 ]\n",
+      "  [ 2.76005865  2.73253008  2.62965981  2.46702637]\n",
+      "  [-3.10442643 -3.21370033 -3.21713587 -3.13175077]]\n",
+      "\n",
+      " [[-0.45826345 -0.41885935 -0.38319205 -0.35253664]\n",
+      "  [-5.00602131 -5.03222777 -4.90634315 -4.64757492]\n",
+      "  [ 2.05696619  2.15339489  2.20037451  2.20022187]]\n",
+      "\n",
+      " [[-3.14846793 -3.17493514 -3.39762104 -3.99060835]\n",
+      "  [-0.32696178 -1.24405374 -3.01998726 -6.29372887]\n",
+      "  [ 2.16103737  2.34867682  2.76963804  3.64943318]]\n",
+      "\n",
+      " [[ 0.80245796  0.90047026  0.99133438  1.07323565]\n",
+      "  [-0.39678933 -0.45746768 -0.5113321  -0.56161706]\n",
+      "  [ 1.36687757  1.50657896  1.62637359  1.73745509]]\n",
+      "\n",
+      " [[-0.53916845 -0.9124626  -1.20369019 -1.28957577]\n",
+      "  [ 0.39538739  0.74708047  0.74803659  1.08869666]\n",
+      "  [ 0.35205185  0.57963252  0.72096862  0.84599979]]\n",
+      "\n",
+      " [[-0.57494746 -0.6827538  -0.7244233  -0.70776427]\n",
+      "  [-0.62752925 -0.79387466 -0.84423961 -0.78037905]\n",
+      "  [-0.64722015 -0.78016222 -0.81866728 -0.77049757]]\n",
+      "\n",
+      " [[ 0.53585533  0.50617689  0.45259731  0.379033  ]\n",
+      "  [ 1.23066603  1.34280169  1.39825799  1.40499846]\n",
+      "  [ 1.00707648  1.12389771  1.20075155  1.24102468]]\n",
+      "\n",
+      " [[-0.51793052 -0.62189592 -0.65939188 -0.64139205]\n",
+      "  [ 0.2946986   0.34668639  0.3613548   0.33450317]\n",
+      "  [-1.38276043 -1.47378424 -1.47902853 -1.41771965]]\n",
+      "\n",
+      " [[ 1.45158052  1.55096877  1.64351332  1.75457351]\n",
+      "  [ 1.43839487  1.61193098  1.78742767  1.99509816]\n",
+      "  [-1.73838097 -1.90815608 -2.0711485  -2.2605723 ]]]\n",
+      "[[ 2.46842678  2.75829793 -3.10468885]\n",
+      " [-0.45271037 -5.00550014  2.05307567]\n",
+      " [-3.13171637 -0.16333314  2.12840225]\n",
+      " [ 0.78107288 -0.38633144  1.34018945]\n",
+      " [-0.53599332  0.46570756  0.34345954]\n",
+      " [-0.60101804 -0.66598099 -0.67476798]\n",
+      " [ 0.54499588  1.25698658  1.01354487]\n",
+      " [-0.5304166   0.30747392 -1.39916547]\n",
+      " [ 1.42524997  1.41750537 -1.72321205]]\n"
      ]
     },
     {
@@ -123,6 +166,20 @@
       "c:\\Users\\birk\\anaconda3\\lib\\site-packages\\ase\\io\\extxyz.py:1000: UserWarning: write_xyz() overwriting array \"magmoms\" present in atoms.arrays with stored results from calculator\n",
       "  warnings.warn('write_xyz() overwriting array \"{0}\" present '\n"
      ]
+    },
+    {
+     "ename": "PropertyNotImplementedError",
+     "evalue": "The property \"forces\" is not available.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPropertyNotImplementedError\u001b[0m               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-7228efa950c5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m#Get the forces, momenta, and positions for the current step\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;31m#forces = mol[i].get_forces()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmol\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_forces\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mforces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpredicted_forces\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmol\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_momenta\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\birk\\anaconda3\\lib\\site-packages\\ase\\atoms.py\u001b[0m in \u001b[0;36mget_forces\u001b[1;34m(self, apply_constraint, md)\u001b[0m\n\u001b[0;32m    786\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_calc\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    787\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Atoms object has no calculator.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 788\u001b[1;33m         \u001b[0mforces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_calc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_forces\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    789\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    790\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mapply_constraint\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\birk\\anaconda3\\lib\\site-packages\\ase\\calculators\\abc.py\u001b[0m in \u001b[0;36mget_forces\u001b[1;34m(self, atoms)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_forces\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0matoms\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_property\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'forces'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0matoms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_stress\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0matoms\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\birk\\anaconda3\\lib\\site-packages\\ase\\calculators\\singlepoint.py\u001b[0m in \u001b[0;36mget_property\u001b[1;34m(self, name, atoms, allow_calculation)\u001b[0m\n\u001b[0;32m     44\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_state\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0matoms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mallow_calculation\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 46\u001b[1;33m                 raise PropertyNotImplementedError(\n\u001b[0m\u001b[0;32m     47\u001b[0m                     'The property \"{0}\" is not available.'.format(name))\n\u001b[0;32m     48\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mPropertyNotImplementedError\u001b[0m: The property \"forces\" is not available."
+     ]
     }
    ],
    "source": [
@@ -132,6 +189,7 @@
     "\n",
     "#Predicting the forces\n",
     "predicted_forces = predict_forces()\n",
+    "print(predicted_forces)\n",
     "\n",
     "#Repurposing the step function from ASE velverlet\n",
     "for i in range(pred_step):\n",
